...
    FoodKeyword("파", FoodGroup.VEGETABLES, wholeNameOnly = true),
    FoodKeyword("무", FoodGroup.VEGETABLES, wholeNameOnly = true),
    // 과일
    FoodKeyword("과일", FoodGroup.FRUIT),
    FoodKeyword("청과", FoodGroup.FRUIT),
    FoodKeyword("fruit", FoodGroup.FRUIT),
    FoodKeyword("사과", FoodGroup.FRUIT),
    FoodKeyword("apple", FoodGroup.FRUIT),
    FoodKeyword("바나나", FoodGroup.FRUIT),
    FoodKeyword("banana", FoodGroup.FRUIT),
    FoodKeyword("귤", FoodGroup.FRUIT),
    FoodKeyword("오렌지", FoodGroup.FRUIT),
    FoodKeyword("orange", FoodGroup.FRUIT),
...
    FoodKeyword("beef", FoodGroup.MEAT),
    FoodKeyword("pork", FoodGroup.MEAT),
    FoodKeyword("chicken", FoodGroup.MEAT),
    FoodKeyword("duck", FoodGroup.MEAT),
    FoodKeyword("lamb", FoodGroup.MEAT),
    // 유제품
    FoodKeyword("우유", FoodGroup.DAIRY),
    FoodKeyword("유제품", FoodGroup.DAIRY),
    FoodKeyword("치즈", FoodGroup.DAIRY),
    FoodKeyword("cheese", FoodGroup.DAIRY),
    FoodKeyword("요거트", FoodGroup.DAIRY),
    FoodKeyword("요구르트", FoodGroup.DAIRY),
    FoodKeyword("yogurt", FoodGroup.DAIRY),
...
    FoodKeyword("햄", FoodGroup.PROCESSED),
    FoodKeyword("베이컨", FoodGroup.PROCESSED),
    FoodKeyword("어묵", FoodGroup.PROCESSED),
    FoodKeyword("맛살", FoodGroup.PROCESSED),
    FoodKeyword("스팸", FoodGroup.PROCESSED),
    FoodKeyword("너겟", FoodGroup.PROCESSED),
    FoodKeyword("두부", FoodGroup.PROCESSED),
    FoodKeyword("과자", FoodGroup.PROCESSED),
    FoodKeyword("쿠키", FoodGroup.PROCESSED),
    FoodKeyword("크래커", FoodGroup.PROCESSED),
    FoodKeyword("초콜릿", FoodGroup.PROCESSED),
    FoodKeyword("사탕", FoodGroup.PROCESSED),
    FoodKeyword("젤리", FoodGroup.PROCESSED),
...
